--- a/dev/scss/sections/_section1.scss
+++ b/dev/scss/sections/_section1.scss
@@ -1,68 +1,4 @@
 /* =============
-    section1
+    mission statement
 ============= */
-#section1 { 
-
-    @include md {
-        display: grid;
-        grid-template-columns: 16px auto 16px;
-        grid-template-areas: ". section1 .";
-    }
-
-    @include xl {
-        grid-template-columns: auto 1200px auto;
-    }
-
-    >div {
-
-        @include md {
-            grid-area: section1;
-        }
-
-        ul {
-
-            #s1 {
-                @include md {
-                    grid-area: s1;
-                }
-            }
-
-            @include md {
-                display: grid;
-                grid-template-columns: repeat(4, 1fr);
-                grid-template-areas: 
-                " "s1 s1
-                s2 s2
-                s3 barn-image
-                s4 barn-image
-                s5";
-                gap: 16px;
-            }
-
-            @include lg{
-                grid-template-columns: repeat(6, 1fr);
-                grid-template-areas: 
-                "s1 s1
-                s2 s2
-                s3 barn-image
-                s4 barn-image
-                s5";
-            }
-
-            li{
-                img {
-                    width: 100%;
-                }
-
-                section {
-                    display: grid;
-                    grid-template-columns: 16px auto 16px;
-                    grid-template-areas: ". section1 .";
-                    >div{
-                        grid-area: section1;
-                    }
-                }
-            }
-        }
-    }
-}
+#mission-statement 
