GRID FINALLY WORKED

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -562,388 +562,122 @@ footer > div ul li a:visited:active {
 }
 
 /* =============
-    Hero 
+    section-1
 ============= */
-#hero {
-  background-image: url("../img/hero/hero.jpg");
-  background-position: center;
-  background-size: cover;
-  height: 360px;
+.container {
+  width: 75%;
+  margin: 0 auto;
 }
-@media (min-width: 768px) {
-  #hero {
-    height: 683px;
-  }
-}
-
-/* =============
-    History
-============= */
-#history {
+.container #mission-statement {
   display: grid;
-  grid-template-columns: 16px auto 16px;
-  grid-template-areas: ". history .";
-  padding: 60px 0;
+  grid-template-areas: "mh" "mi1" "mi2";
 }
-@media (min-width: 1024px) {
-  #history {
-    grid-template-columns: auto 60% auto;
-    padding: 100px 0;
-  }
+.container #mission-statement #mission-heading {
+  grid-area: mh;
 }
-@media (min-width: 1200px) {
-  #history {
-    grid-template-columns: auto 800px auto;
-  }
+.container #mission-statement #mission-heading h1 {
+  color: limegreen;
 }
-#history > div {
-  grid-area: history;
+.container #mission-statement #mission-info-1 {
+  grid-area: mi1;
 }
-#history > div #history-first {
-  text-align: center;
-}
-@media (min-width: 768px) {
-  #history > div #history-first {
-    display: grid;
-    grid-template-areas: ". history-first .";
-    grid-template-columns: 10% auto 10%;
-  }
-}
-@media (min-width: 768px) {
-  #history > div #history-first > div {
-    grid-area: history-first;
-  }
-}
-#history > div #history-first > div h1 {
-  color: #F8C832;
-  font-family: "Comfortaa", cursive;
-  font-size: 3rem;
-  font-weight: 700;
-  line-height: 2.875rem;
-  margin: 40px 0 30px;
-}
-@media (min-width: 768px) {
-  #history > div #history-first > div h1 {
-    font-size: 3.4375rem;
-    line-height: 3.5rem;
-    margin-bottom: 34px;
-  }
-}
-@media (min-width: 1024px) {
-  #history > div #history-first > div h1 {
-    font-size: 4.125rem;
-  }
-}
-#history > div #history-first > div h1 span {
-  display: block;
-  font-size: 1.9375rem;
-}
-@media (min-width: 768px) {
-  #history > div #history-first > div h1 span {
-    font-size: 2.625rem;
-  }
-}
-@media (min-width: 1024px) {
-  #history > div #history-first > div h1 span {
-    font-size: 3.375rem;
-  }
-}
-#history > div #history-first > div h4 {
-  font-size: 1.0625rem;
-  font-weight: 400;
-}
-@media (min-width: 1024px) {
-  #history > div #history-middle {
-    display: grid;
-    grid-template-areas: ". history-middle .";
-    grid-template-columns: 10% auto 10%;
-  }
-}
-@media (min-width: 1024px) {
-  #history > div #history-middle > div {
-    grid-area: history-middle;
-  }
-}
-#history > div #history-middle > div p {
-  font-size: 1.125rem;
-  font-weight: 600;
-  line-height: 1.375rem;
-  margin-top: 25px;
-  text-align: justify;
-}
-@media (min-width: 768px) {
-  #history > div #history-middle > div p {
-    line-height: 1.625rem;
-    margin-top: 34px;
-  }
-}
-@media (min-width: 768px) {
-  #history > div #history-last {
-    display: grid;
-    grid-template-areas: ". history-last .";
-    grid-template-columns: 10% auto 10%;
-  }
-}
-@media (min-width: 1024px) {
-  #history > div #history-last {
-    grid-template-columns: 15% auto 15%;
-  }
-}
-@media (min-width: 768px) {
-  #history > div #history-last > div {
-    grid-area: history-last;
-  }
-}
-#history > div #history-last > div h3 {
-  font-size: 1rem;
-  margin-top: 25px;
-}
-@media (min-width: 768px) {
-  #history > div #history-last > div h3 {
-    margin-top: 80px;
-  }
-}
-@media (min-width: 1024px) {
-  #history > div #history-last > div h3 {
-    margin-top: 100px;
-  }
-}
-#history > div #history-last > div p {
-  line-height: 1.375rem;
-  text-align: justify;
-}
-
-/* =============
-    Skills
-============= */
-@media (min-width: 1200px) {
-  #skills {
-    display: grid;
-    grid-template-columns: auto 1200px auto;
-    grid-template-areas: ". skills-container .";
-  }
-}
-@media (min-width: 1024px) {
-  #skills > div {
-    display: grid;
-    grid-template-columns: 40% auto;
-  }
-}
-@media (min-width: 1200px) {
-  #skills > div {
-    grid-area: skills-container;
-  }
-}
-#skills > div aside {
-  background-image: url("../img/skills/robot.jpg");
-  background-position: center;
-  background-size: cover;
-  height: 380px;
-}
-@media (min-width: 768px) {
-  #skills > div aside {
-    height: 476px;
-  }
-}
-@media (min-width: 1024px) {
-  #skills > div aside {
-    height: auto;
-  }
-}
-#skills > div #skills-content {
-  background-color: #222222;
-  color: #fff;
+.container #mission-statement #mission-info-2 {
   display: grid;
-  grid-template-columns: 16px auto 16px;
-  grid-template-areas: ". skills .";
-  padding: 60px 0;
-  grid-template-columns: 10px auto 10px;
-  padding: 60px 0;
+  grid-area: mi2;
+  grid-template-columns: 50% 50%;
+  grid-template-areas: "mi2-lc mi2-rc";
 }
-@media (min-width: 768px) {
-  #skills > div #skills-content {
-    grid-template-columns: 10% auto 10%;
-  }
+.container #mission-statement #mission-info-2 section {
+  grid-area: mi2-lc;
 }
-@media (min-width: 1024px) {
-  #skills > div #skills-content {
-    padding: 25px 0 44px;
-  }
+.container #mission-statement #mission-info-2 aside {
+  grid-area: mi2-rc;
 }
-#skills > div #skills-content > div {
-  grid-area: skills;
-  text-decoration: none;
-  transition: 0.25s;
-}
-#skills > div #skills-content > div h1 {
-  font-family: "Comfortaa", cursive;
-  font-size: 1.3125rem;
-  line-height: 1.625rem;
-  margin-bottom: 35px;
-}
-#skills > div #skills-content > div p {
-  font-size: 1.125rem;
-  line-height: 1.625rem;
-  display: inline-block;
-}
-#skills > div #skills-content > div ul li {
-  margin-top: 46px;
-}
-@media (min-width: 768px) {
-  #skills > div #skills-content > div ul li {
-    margin-top: 51px;
-  }
-}
-#skills > div #skills-content > div ul li .top {
-  display: flex;
-}
-#skills > div #skills-content > div ul li .top h5 {
-  font-size: 1.125rem;
-  font-weight: 400;
-}
-#skills > div #skills-content > div ul li .top h4 {
-  font-size: 1.125rem;
-  margin-left: auto;
-}
-#skills > div #skills-content > div ul li .bottom {
-  background-color: #000;
-  height: 9px;
-  margin-top: 5px;
-  width: 100%;
-}
-#skills > div #skills-content > div ul li .bottom > div {
-  background-color: #F8C832;
-  height: 9px;
-}
-#skills > div #skills-content > div ul #emotion .yellow-bar {
-  width: 64%;
-}
-#skills > div #skills-content > div ul #learning .yellow-bar {
-  width: 90%;
-}
-#skills > div #skills-content > div ul #math .yellow-bar {
-  width: 95%;
-}
-
-/* =============
-    Hero 2
-============= */
-#hero-2 {
-  display: grid;
-  grid-template-columns: 16px auto 16px;
-  grid-template-areas: ". hero-2 .";
-}
-@media (min-width: 1200px) {
-  #hero-2 {
-    grid-template-columns: auto 1200px auto;
-  }
-}
-#hero-2 img {
-  grid-area: hero-2;
+.container #mission-statement #mission-info-2 aside img {
   width: 100%;
 }
 
 /* =============
-    Skynet
+    section-2
 ============= */
-#skynet {
+.container-2 {
+  width: 75%;
+  margin: 0 auto;
+}
+.container-2 #donations-and-volunteering {
   display: grid;
-  grid-template-columns: 16px auto 16px;
-  grid-template-areas: ". skynet .";
+  grid-template-areas: "dv" "dv1" "dv2" "dvb" "dv3";
 }
-@media (min-width: 768px) {
-  #skynet {
-    padding: 54px 0;
-  }
+.container-2 #donations-and-volunteering #donations-and-volunteering-header {
+  grid-area: dv;
 }
-@media (min-width: 1024px) {
-  #skynet {
-    padding: 100px 0;
-  }
+.container-2 #donations-and-volunteering #donations-and-volunteering-info-1 {
+  grid-area: dv1;
 }
-@media (min-width: 1200px) {
-  #skynet {
-    grid-template-columns: auto 1200px auto;
-  }
-}
-#skynet > div {
-  grid-area: skynet;
-}
-#skynet > div ul {
+.container-2 #donations-and-volunteering #donations-and-volunteering-info-2 {
   display: grid;
-  grid-area: section-5;
-  grid-gap: 20px;
-  grid-template-areas: "gallery-7" "gallery-1" "gallery-1" "gallery-6" "gallery-3";
-  grid-template-rows: repeat(5, 235px);
+  grid-area: dv2;
+  grid-template-columns: 50% 50%;
+  grid-template-areas: "dv2-lc dv2-rc";
 }
-@media (min-width: 768px) {
-  #skynet > div ul {
-    grid-template-areas: "gallery-1 gallery-3" "gallery-1 gallery-7" "gallery-5 gallery-6";
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(3, 277px);
-  }
+.container-2 #donations-and-volunteering #donations-and-volunteering-info-2 section {
+  grid-area: lc-dv2;
 }
-@media (min-width: 1024px) {
-  #skynet > div ul {
-    grid-template-areas: "gallery-1 gallery-5 gallery-2" "gallery-1 gallery-7 gallery-4" "gallery-6 gallery-3 gallery-4";
-    grid-template-columns: repeat(3, 1fr);
-  }
+.container-2 #donations-and-volunteering #donations-and-volunteering-info-2 aside {
+  grid-area: rc-dv2;
 }
-#skynet > div ul li {
-  background-position: center;
-  background-size: cover;
+.container-2 #donations-and-volunteering #donations-and-volunteering-info-2 aside img {
+  width: 100%;
 }
-#skynet > div ul #gallery-1 {
-  background-image: url("../img/skynet/gallery-1.jpg");
-  grid-area: gallery-1;
+.container-2 #donations-and-volunteering #donations-and-volunteering-button {
+  grid-area: dvb;
 }
-#skynet > div ul #gallery-2 {
-  background-image: url("../img/skynet/gallery-2.jpg");
+.container-2 #donations-and-volunteering #donations-and-volunteering-info-3 {
+  grid-area: dv3;
 }
-@media (min-width: 1024px) {
-  #skynet > div ul #gallery-2 {
-    grid-area: gallery-2;
-  }
+
+/* =============
+    section-3
+============= */
+.container-3 {
+  width: 75%;
+  margin: 0 auto;
 }
-#skynet > div ul #gallery-3 {
-  background-image: url("../img/skynet/gallery-3.jpg");
-  background-position: center top;
-  grid-area: gallery-3;
+.container-3 #our-programs {
+  display: grid;
+  grid-template-areas: "op" "fourh" "op1" "op2" "ls" "op3" "op4";
 }
-#skynet > div ul #gallery-4 {
-  background-image: url("../img/skynet/gallery-4.jpg");
+.container-3 #our-programs #our-programs-heading {
+  grid-area: op;
 }
-@media (min-width: 1024px) {
-  #skynet > div ul #gallery-4 {
-    grid-area: gallery-4;
-  }
+.container-3 #our-programs #fourh {
+  grid-area: fourh;
 }
-#skynet > div ul #gallery-5 {
-  background-image: url("../img/skynet/gallery-5.jpg");
+.container-3 #our-programs #our-programs-info-1 {
+  grid-area: op1;
 }
-@media (min-width: 768px) {
-  #skynet > div ul #gallery-5 {
-    grid-area: gallery-5;
-  }
+.container-3 #our-programs #our-programs-info-2 {
+  display: grid;
+  grid-area: op2;
+  grid-template-columns: 50% 50%;
+  grid-template-areas: "op2-lc op2-rc";
 }
-#skynet > div ul #gallery-6 {
-  background-image: url("../img/skynet/gallery-6.jpg");
-  grid-area: gallery-6;
+.container-3 #our-programs #our-programs-info-2 section {
+  grid-area: op2-lc;
 }
-#skynet > div ul #gallery-7 {
-  align-items: center;
-  color: #F8C832;
-  display: flex;
-  font-family: "Pacifico", cursive;
-  grid-area: gallery-7;
-  justify-content: center;
+.container-3 #our-programs #our-programs-info-2 aside {
+  grid-area: op2-rc;
 }
-#skynet > div ul #gallery-7 h1 {
-  font-size: 2.6875rem;
-  font-weight: 400;
+.container-3 #our-programs #our-programs-info-2 aside img {
+  width: 100%;
 }
-@media (min-width: 768px) {
-  #skynet > div ul #gallery-7 h1 {
-    font-size: 2.875rem;
-  }
+.container-3 #our-programs #our-programs-info-3 {
+  grid-area: op3;
+}
+.container-3 #our-programs #our-programs-info-4 {
+  grid-area: op4;
+}
+.container-3 #our-programs #op-pics {
+  display: grid;
+  grid-template-areas: ". i1 i2 i3 ." ". i4 . i5 .";
 }
