--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -19,8 +19,7 @@
 @import "layout/_footer";
 
 // Sections Styles
-@import "sections/_hero";
-@import "sections/_history";
-@import "sections/_skills";
-@import "sections/_hero-2";
-@import "sections/_skynet";
+@import "sections/_section1";
+@import "sections/_section2";
+@import "sections/_section3";
+
