--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -2,15 +2,19 @@
     Typography
 ============= */
 body{
-    font-family: 'Comfortaa', cursive;
+    font-family: 'Comfortaa';
+}
+
+h1{
+    font-family: 'Open Sans', serif;
 }
 
 h1,h2,h3,h4,h5{
-    margin: 0;
+    margin: 10px;
     padding: 0;
 }
 
 p{
-    padding: 0;
+    padding: 5px;
     margin: 0;
 }
