--- a/dev/scss/sections/_section1.scss
+++ b/dev/scss/sections/_section1.scss
@@ -14,7 +14,8 @@
       
       #mission-heading { grid-area: mh; 
       h1 {
-        color: limegreen;
+        color: #fff;
+        background-color: #60695C;
       }
     }
 
