--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -9,9 +9,13 @@ h1{
     font-family: 'Open Sans', serif;
 }
 
-h1,h2,h3,h4,h5{
+h1{
     margin: 10px;
-    padding: 0;
+    padding: 20px;
+    margin-left: -160px;
+    margin-right: -160px;
+    color: white;
+    background-color: #60695C;
 }
 
 p{
