--- a/dev/scss/sections/_section4.scss
+++ b/dev/scss/sections/_section4.scss
@@ -16,10 +16,6 @@
       "bi3"
       "bi4";
     
-    #boarding-heading { grid-area: bh; 
-    h1 {
-      color: limegreen;
-    }
-  }
+    #boarding-heading { grid-area: bh;}
   }
 }
