--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -16,7 +16,14 @@ h1{
     background-color: #60695C;
 }
 
+h2 {
+    color: #4A4D48;
+    font-family: 'Helvetica Neue', serif;
+    padding: 0px;
+}
+
 p{
     padding: 5px;
-    margin: 0;
+    margin: 10px;
+    color: #4A4D48;
 }
