--- a/dev/scss/sections/_section3.scss
+++ b/dev/scss/sections/_section3.scss
@@ -4,6 +4,11 @@
 .container-3 {
     width: 75%;
     margin: 0 auto;
+
+
+    img {
+      align-items: center;
+    }
     
     #our-programs {
       display: grid;
@@ -35,13 +40,6 @@
       #our-programs-info-3 { grid-area: op3; }
       #our-programs-info-4 { grid-area: op4; }
       
-      #op-pics {
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
-        grid-template-areas: 
-        "i1 i2 i3"
-        "  14 15  ";
-      }
      
     }
   }
