--- a/dev/scss/sections/_section1.scss
+++ b/dev/scss/sections/_section1.scss
@@ -11,6 +11,8 @@
         "mh"
         "mi1"
         "mi2";
+
+      text-align: left;
       
       #mission-heading { grid-area: mh; 
       h1 {
