--- a/dev/scss/sections/_section3.scss
+++ b/dev/scss/sections/_section3.scss
@@ -64,6 +64,13 @@
         clear: both;
         display: table;
       }
+
+      .center {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+      }
     }
 
     @media screen and (max-width: 500px) {
