--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -664,6 +664,12 @@ footer > div ul li a:visited:active {
   clear: both;
   display: table;
 }
+.container-3 #our-programs .center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 @media screen and (max-width: 500px) {
   .container-3 .column {
     width: 100%;
